# gerador-arquivos

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/src/app/: main.py
backend/src/app/api/dependencies/: repositories.py  services.py
backend/src/app/api/routes/: articles.py  health.py
backend/src/app/api/schemas/: article.py
backend/src/app/application/articles/: exceptions.py
backend/src/app/application/articles/commands/: create_article.py  delete_article.py  generate_article.py  publish_article_to_wordpress.py  update_article.py
backend/src/app/core/: config.py
backend/src/app/domain/articles/: entities.py  exceptions.py  repository.py
backend/src/app/domain/users/: entities.py  repository.py
backend/src/app/infrastructure/auth/: __init__.py  auth_backend.py  user_manager.py
backend/src/app/infrastructure/db/: base.py  session.py
backend/src/app/infrastructure/gemini/: article_generator.py
backend/src/app/infrastructure/openai/: article_generator.py
backend/src/app/infrastructure/wordpress/: mock_publisher.py  rest_publisher.py
backend/tests/: conftest.py
backend/tests/api/: test_articles.py  test_auth.py  test_health.py
backend/tests/integration/infrastructure/: test_article_repository.py
backend/tests/support/: db_url.py  fakes.py
backend/tests/unit/application/: test_article_use_cases.py
backend/tests/unit/domain/: test_article_entities.py
(+67 files in other folders)
