[project]
name = "gerador-artigos-backend"
version = "0.1.0"
description = "Backend do gerador de artigos para WordPress"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
